# Quakespasm-OpenVR

./: .clang-format  .gitignore  README.md  make_pak.bat
Linux/CodeBlocks/: QuakeSpasm-SDL2.cbp
QC/: buttons.qc  client.qc  defs.qc  dog.qc  items.qc  misc.qc  pak3.pak  player.qc  progdefs.h  soldier.qc  weapons.qc  wizard.qc
Quake/: bgmusic.c  bgmusic.cpp  cd_null.c  cd_sdl.c  cfgfile.c  cfgfile.cpp  chase.c  chase.cpp  cl_demo.c  cl_demo.cpp  cl_input.c  cl_input.cpp  cl_main.c  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_tent.c  cl_tent.cpp  client.h  client.hpp  cmd.c  cmd.cpp  cmd.h  common.c  common.cpp  common.h  console.c  console.cpp  crc.c  crc.cpp  cvar.c  cvar.cpp  cvar.h  filenames.h  gl_draw.c  gl_draw.cpp  gl_fog.c  gl_fog.cpp  gl_mesh.c  gl_mesh.cpp  (+169 more)
Windows/: CMakeLists.txt
Windows/VisualStudio/: quakespasm-sdl2.vcxproj  quakespasm-sdl2.vcxproj.filters
Windows/codecs/include/: mpg123.h
models/: v_axe.blend1  v_axe.mdl  v_light.blend  v_light.blend1  v_light.mdl  v_shot.blend1  v_shot2.blend  v_shot2.blend1  v_shot2.mdl
old/: config.cfg  scratchpad.cpp
